# xyber-sdk

./: .gitignore  README.md  pyproject.toml
src/xyber_sdk/guardrails/: README.md  __init__.py  guard_nodes.py  supervisor.py  validators.py
src/xyber_sdk/mcp_client/: README.md  __init__.py  client.py  config.py
src/xyber_sdk/model_registry/: README.md  __init__.py  chat_models.py  config.py  model_factory.py
tests/: .env.test.example
tests/integration/: conftest.py
tests/integration/model_registry/: test_model_availability.py
tests/unit/guardrails/: test_supervisor.py
tests/unit/mcp_client/: test_client.py  test_config_mcp.py
tests/unit/model_registry/: test_config_model.py  test_model_factory.py
