[project]
name = "xyber-sdk"
version = "0.2.2"
description = "Shared utilities for LLM initialization, MCP server connections, and guardrails"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.8.1",
    "httpx>=0.27.0",
    "langchain-core>=0.3.29",
    "langchain-google-genai>=2.1.2",
    "langgraph>=0.4",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "guardrails-ai>=0.6.6,<0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xyber_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/xyber_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
